--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "dependencies": {
-    "@sveltejs/adapter-auto": "^2.1.0",
+    "@sveltejs/adapter-node": "^1.2.4",
     "@sveltejs/kit": "^1.20.2",
     "@total-typescript/ts-reset": "^0.4.2",
     "autoprefixer": "^10.4.14",
