--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@sveltejs/adapter-node": "^1.2.4",
     "@sveltejs/kit": "^1.20.2",
     "@total-typescript/ts-reset": "^0.4.2",
+    "@types/marked": "^5.0.0",
     "autoprefixer": "^10.4.14",
+    "dompurify": "^3.0.3",
+    "jsdom": "^22.1.0",
+    "marked": "^5.1.0",
     "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
     "sass": "^1.63.0",
@@ -28,6 +32,8 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/dompurify": "^3.0.2",
+    "@types/jsdom": "^21.1.1",
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
